[project]
name = "selfreport"
version = "0.1.0"
description = "METR Agent wrappers"
readme = "README.md"
authors = [{ name = "METR", email = "team@metr.org" }]
requires-python = ">=3.10"
dependencies = [
  "inspect-ai>=0.3.91", # the infra has its own version of inspect
  "openai>=1.82.0",
  "anthropic",
  "matplotlib>=3.5.0",
  "numpy>=1.20.0",
  "requests>=2.32.4",
]

[project.optional-dependencies]
dev = [
  "basedpyright",
  "pytest-asyncio",
  "pytest-mock",
  "pytest",
  "ruff",
  "types-aiofiles",
  "types-pyyaml",
  "types-requests",
]


[tool.basedpyright]
reportAny = false
reportExplicitAny = false
reportUnusedCallResult = false

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = [
  # Use modern Python imports (i.e., don't require __init__.py files everywhere)
  "--import-mode=importlib",
  # Require markers to be explicitly defined
  "--strict-markers",
]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
